deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:10.1
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoutbox
spec:
  selector:
    matchLabels:
      app: shoutbox
  replicas: 2
  template:
    metadata:
      labels:
        app: shoutbox
    spec:
      containers:
      - name: shoutbox
        image: shoutbox:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: shoutbox
spec:
  selector:
    app: shoutbox
  ports:
    - port: 4000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-ingress
spec:
  defaultBackend:
    service:
      name: shoutbox
      port:
        number: 4000
